tests/ui/for/issue-20605.next.stderr
error[E0277]: the trait bound `dyn Iterator<Item = &'a mut u8>: IntoIterator` is not satisfied
  --> $DIR/issue-20605.rs:5:17
   |
LL |     for item in *things { *item = 0 }
   |                 ^^^^^^^ the trait `IntoIterator` is not implemented for `dyn Iterator<Item = &'a mut u8>`

error[E0277]: the size for values of type `<dyn Iterator<Item = &'a mut u8> as IntoIterator>::IntoIter` cannot be known at compilation time
  --> $DIR/issue-20605.rs:5:17
   |
LL |     for item in *things { *item = 0 }
   |                 ^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `<dyn Iterator<Item = &'a mut u8> as IntoIterator>::IntoIter`
   = note: all local variables must have a statically known size
   = help: unsized locals are gated as an unstable feature

error: the type `<dyn Iterator<Item = &'a mut u8> as IntoIterator>::IntoIter` is not well-formed
  --> $DIR/issue-20605.rs:5:17
   |
LL |     for item in *things { *item = 0 }
   |                 ^^^^^^^

error[E0277]: `<dyn Iterator<Item = &'a mut u8> as IntoIterator>::IntoIter` is not an iterator
  --> $DIR/issue-20605.rs:5:17
   |
LL |     for item in *things { *item = 0 }
   |                 ^^^^^^^ `<dyn Iterator<Item = &'a mut u8> as IntoIterator>::IntoIter` is not an iterator
   |
   = help: the trait `Iterator` is not implemented for `<dyn Iterator<Item = &'a mut u8> as IntoIterator>::IntoIter`

error: the type `&mut <dyn Iterator<Item = &'a mut u8> as IntoIterator>::IntoIter` is not well-formed
  --> $DIR/issue-20605.rs:5:17
   |
LL |     for item in *things { *item = 0 }
   |                 ^^^^^^^

error[E0614]: type `<<dyn Iterator<Item = &'a mut u8> as IntoIterator>::IntoIter as Iterator>::Item` cannot be dereferenced
  --> $DIR/issue-20605.rs:5:27
   |
LL |     for item in *things { *item = 0 }
   |                           ^^^^^

error[E0277]: the size for values of type `<<dyn Iterator<Item = &'a mut u8> as IntoIterator>::IntoIter as Iterator>::Item` cannot be known at compilation time
  --> $DIR/issue-20605.rs:5:9
   |
LL |     for item in *things { *item = 0 }
   |         ^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `<<dyn Iterator<Item = &'a mut u8> as IntoIterator>::IntoIter as Iterator>::Item`
   = note: all local variables must have a statically known size
   = help: unsized locals are gated as an unstable feature

error: the type `Option<<<dyn Iterator<Item = &'a mut u8> as IntoIterator>::IntoIter as Iterator>::Item>` is not well-formed
  --> $DIR/issue-20605.rs:5:17
   |
LL |     for item in *things { *item = 0 }
   |                 ^^^^^^^

error[E0277]: the size for values of type `<<dyn Iterator<Item = &'a mut u8> as IntoIterator>::IntoIter as Iterator>::Item` cannot be known at compilation time
  --> $DIR/issue-20605.rs:5:5
   |
LL |     for item in *things { *item = 0 }
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `<<dyn Iterator<Item = &'a mut u8> as IntoIterator>::IntoIter as Iterator>::Item`
note: required by a bound in `None`
  --> $SRC_DIR/core/src/option.rs:LL:COL

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0277, E0614.
For more information about an error, try `rustc --explain E0277`.
